# ma35d1-portal

./: README.md
drivers/mod_xyz/: Kbuild  Makefile  main.c
drivers/mod_xyz/include/: mod_xyz_defs.h
examples/wayland/lvgl/lvgl-wayland-calendar/: CMakeLists.txt  main.c
examples/wayland/lvgl/lvgl-wayland-minimal/: CMakeLists.txt  main.c
examples/wayland/lvgl/lvgl-wayland-widgets-demo/: CMakeLists.txt  lv_demo_widgets.c  main.c
mk/: local.mk
package/: Config.in
package/libalac/: Config.in  libalac.mk
package/libplist/: 0001-fix-version.patch  libplist.hash  libplist.mk  libplist.mk.bak
package/lvgl/: Config.in  lvgl.mk
package/nqptp/: 0001-fix-destdir-with-suffix.patch  Config.in  S60nqptp  nqptp.hash  nqptp.mk
package/nuvoton-ma35d1/python3-nuwriter/: python3-nuwriter.mk  requirement.txt  requirements.dep
package/shairport-sync/: Config.in  shairport-sync.hash  shairport-sync.mk
package/wayland/: wayland.hash
package/wayland-protocols/: wayland-protocols.hash
package/wayland-utils/: wayland-utils.hash
package/weston/: Config.in  weston.ini  weston.mk  weston.sh
patches/buildroot-2021/: 0001-cmake-3.28.3.patch  0001-package-pkg-generic.mk-a-more-generic-way-to-rebuild.patch  0002-weston-10.0.5.patch  0003-nvt-lvgl-wayland-8.3.0.patch  enable-go-language-support-in-buildroot-2021.patch
patches/buildroot-2024/: 0001-more-generic-way-to-rebuild-package.patch  enable-go-language-support-in-buildroot-2024.patch
rootfs/etc/: mdev.conf  shairport-sync.conf
rootfs/etc/network/: interfaces
rootfs/etc/profile.d/: tslib.sh
scripts/: build-package.sh  make-ext4-helper.sh  make-ext4.sh  make-sdk.sh  rebuild-all.sh  rebuild-dts.sh  rebuild-rootfs.sh  save-configs.sh  update-sources.sh  yocto-environment-setup.sh
